ecmascript/parser/tests/test262-error-references/fail/479332b63ff26de1.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/479332b63ff26de1.js:1:3
  |
1 | ({a = 0});
  |   ^^^^^

